set (TSTPATH ${CMAKE_CURRENT_SOURCE_DIR}/../tst/)
set (SRCPATH ${CMAKE_CURRENT_SOURCE_DIR}/../src/)

include_directories (${TSTPATH})
include_directories (${SRCPATH})
set(FOO ${SRCPATH}thread.c)

if(USE_PTHREAD EQUAL 1)
  set(FOO "")
endif()

add_executable(01-main ${TSTPATH}01-main.c ${FOO})
add_executable(02-switch ${TSTPATH}02-switch.c ${FOO})
add_executable(11-join ${TSTPATH}11-join.c ${FOO})
add_executable(12-join-main ${TSTPATH}12-join-main.c ${FOO})
add_executable(21-create-many ${TSTPATH}21-create-many.c ${FOO})
add_executable(22-create-many-recursive ${TSTPATH}22-create-many-recursive.c ${FOO})
add_executable(23-create-many-once ${TSTPATH}23-create-many-once.c ${FOO})
add_executable(31-switch-many ${TSTPATH}31-switch-many.c ${FOO})
add_executable(32-switch-many-join ${TSTPATH}32-switch-many-join.c ${FOO})
add_executable(51-fibonacci ${TSTPATH}51-fibonacci.c ${FOO})
add_executable(61-mutex ${TSTPATH}61-mutex.c ${FOO})
add_executable(70-sum-array ${TSTPATH}70-sum-array.c ${FOO})
add_executable(71-sort-array ${TSTPATH}71-sort-array.c ${FOO})
add_executable(72-map-array ${TSTPATH}72-map-array.c ${FOO})
#add_executable(80-scheduler ${TSTPATH}80-test_scheduler.c ${FOO})
add_executable(80-signals ${TSTPATH}80-signals.c ${FOO})
add_executable(81-mprotect ${TSTPATH}81-mprotect.c ${FOO})

target_link_libraries(01-main rt)
target_link_libraries(02-switch rt)
target_link_libraries(11-join rt)
target_link_libraries(12-join-main rt)
target_link_libraries(21-create-many rt)
target_link_libraries(22-create-many-recursive rt)
target_link_libraries(23-create-many-once rt)
target_link_libraries(31-switch-many rt)
target_link_libraries(32-switch-many-join rt)
target_link_libraries(51-fibonacci rt)
target_link_libraries(61-mutex rt)
target_link_libraries(70-sum-array rt)
target_link_libraries(71-sort-array rt)
target_link_libraries(72-map-array rt)
#target_link_libraries(80-scheduler rt)
target_link_libraries(80-signals rt)
target_link_libraries(81-mprotect rt)

######################################
#            RUNNING TESTS          #
######################################

add_test ([TEST_01_MAIN] ./01-main)
add_test ([TEST_02_SWITCH] ./02-switch)
add_test ([TEST_11_JOIN] ./11-join)
add_test ([TEST_12_JOIN_MAIN] ./12-join-main)
add_test ([TEST_21_CREATE_MANY] 21-create-many 4)
add_test ([TEST_22_CREATE_MANY_RECURSIVE] 22-create-many-recursive 4)
add_test ([TEST_23_CREATE_MANY_ONCE] 23-create-many-once 4)
add_test ([TEST_31_SWITCH_MANY] 31-switch-many 4 5)
add_test ([TEST_32_SWITCH_MANY_JOIN] 32-switch-many-join 4 5)
add_test ([TEST_51_FIBONACCI] 51-fibonacci 8)
add_test ([TEST_61_MUTEX] 61-mutex 4)
add_test ([TEST_70_SUM_ARRAY] 70-sum-array 1000)
add_test ([TEST_71_SORT_ARRAY] 71-sort-array 1000)
add_test ([TEST_72_MAP_ARRAY] 72-map-array 1000)
add_test ([TEST_80_SIGNALS] 80-signals)
add_test ([TEST_81_MPROTECT] 81-mprotect)
